--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-language: cpp
- compiler: gcc
- dist: trusty
- script:
- - gcc febin.cpp 
- - gcc himm.cpp
- - gcc akshay.cpp
- - gcc AjeetDehal.cpp
- - ./travis_gcc_cpp
+language: cpp  
+      compiler: gcc  
+      dist: trusty  
+      script:   
+        - g++ febin.cpp -o travis_gcc_cpp17  
+        - ./travis_gcc_cpp17 
+        - g++ AjeetDehal.cpp -o travis_gcc_cpp17 
+        - ./travis_gcc_cpp17
+        - g++ akshay.cpp -o travis_gcc_cpp17 
+        - ./travis_gcc_cpp17
+        - g++ himm.cpp -o travis_gcc_cpp17 
+        - ./travis_gcc_cpp17
